# Worker-Statistics-Flask-APP

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: 404.html  500.html  add_record.html  admin_dashboard.html  admin_login.html  base.html  charts.html  feedback_list.html  form.html  index.html  manage_entries.html  modification_log.html  modify_table.html  navbar.html  view_table.html
data/: class disign  erd for cw2  night_worker_normalised.db  update erd cw1
test/: conftest.py  test_flask.py
